fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -154,6 +154,7 @@ body {
 /* Content */
 .content {
 	flex-grow: 1;
+	min-height: 100%;
 }
 
 /* Homepage */
@@ -163,7 +164,7 @@ body {
     justify-content: flex-start;
     align-items: center;
 	padding: 1em 2em;
-	margin-top: 10em;
+	margin-top: 12em;
 	width: 100%;
 	height: 100%;
 }
@@ -194,7 +195,7 @@ body {
 	text-align: center;
 	width: 500px;
 	margin-top: 4em;
-	margin-bottom: 6em;
+	margin-bottom: 4em;
 	padding-left: 2em;
 	padding-right: 2em;
 }
